tests/NormalTests/paczka1/fuzzy1/23608412.err
Error in line 1: FCHpQM A993 59,7
Error in line 2: FCHpQM S249 17,3
Error in line 20: fGoWb6fTzaF A7I0 303,7
Error in line 24: FCHpQM A993 4,4
Error in line 25: FCHpQM A342 17,2
Error in line 28: FCHpQM S249 20,2
